--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline">
+                    <ul id="footer-list" class="list-inline">
                         <li><a href="#">Home</a></li>
                         <li class="footer-menu-divider">⋅</li>
                         <li><a href="#">Register</a></li>
