--- a/index.html
+++ b/index.html
@@ -76,9 +76,18 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Enquire</a></li>
                         <li><a href="#  ">About</a></li>
-                        <li><a href="#">Login</a></li>
-                        <li><a href="#">Register</a></li>
                         <li><a href="#">Gallery</a></li>
+                        <!-- Dropdown -->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                                Account
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Login</a>
+                                <a class="dropdown-item" href="#">Register</a>
+                                <a class="dropdown-item" href="#">Logout</a>
+                            </div>
+                        </li>
                     </ul>
                     
                 </div>
@@ -248,7 +257,8 @@
                             <input type="text" name="departure_date" id="departure_date" placeholder="Departure Date" required>
                             <input type="submit" id="my-form-button" value="ENQUIRE NOW">
                             <!-- <button >Submit</button> -->
-                            <!-- <i class="fas fa-thumbs-up fa-5x"></i> -->
+                            <i id="okay" class="fas fa-thumbs-up fa-5x" style="display: none"></i>
+                            <span id="feedback" class="feedback" style="display: none">Thank you so much, we are at your service and you shall hear frrom us very soon!</span>
 
                         </form>
                         
