--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <li><a href="#  ">About</a></li>
                         <li><a href="#">Gallery</a></li>
                         <!-- Dropdown -->
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                                 Account
                             </a>
@@ -87,7 +87,7 @@
                                 <a class="dropdown-item" href="#">Register</a>
                                 <a class="dropdown-item" href="#">Logout</a>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                     
                 </div>
