--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">Enquire</a></li>
-                        <li><a href="#  ">About</a></li>
-                        <li><a href="#">Gallery</a></li>
+                        <li><a href="#my-form">Enquire</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#gallery">Gallery</a></li>
                         <!-- Dropdown -->
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -168,7 +168,7 @@
 
                             <div class="propMedia pull-right">
 
-                                <div>
+                                <div id="pictures">
                                     <a href="#gallery">
                                         <span class="glyphicon glyphicon-camera"></span>
                                         <br>Pictures
@@ -249,7 +249,7 @@
                             <h3>Plan Your Stay at IVORY SANDS. Get a Quote</h3>
                             <p>(form R 6000 per month)</p>
                             <p>*excluding peak season</p>
-                            <input type="text" name="name" id="name" placeholder="Name" required>
+                            <input type="text" name="name" id="name" placeholder="Name" autofocus required>
                             <input type="text" name="surname" id="surname" placeholder="Surname" required>
                             <input type="tel" name="telephone" id="tel" placeholder="Tel Number" required>
                             <input type="email" name="email" class="email" placeholder="example@email.com" required>
@@ -258,7 +258,7 @@
                             <input type="submit" id="my-form-button" value="ENQUIRE NOW">
                             <!-- <button >Submit</button> -->
                             <i id="okay" class="fas fa-thumbs-up fa-5x" style="display: none"></i>
-                            <span id="feedback" class="feedback" style="display: none">Thank you so much, we are at your service and you shall hear frrom us very soon!</span>
+                            <span id="feedback" class="feedback" style="display: none">Thank you so much, we are at your service and you shall hear from us very soon!</span>
 
                         </form>
                         
@@ -268,7 +268,7 @@
 
             </section>
 
-            <section>
+            <section id="about">
 
                 <button type="button" class="collapsible">
                     <p><b>IVORY SANDS</b> is a unique villa, situate on Clifton beach with direct access
