--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
     <script src="https://kit.fontawesome.com/ec05dfd494.js" crossorigin="anonymous"></script>
 
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+
 </head>
 
 <body>
@@ -74,7 +76,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#my-form">Enquire</a></li>
+                        <li id="refer"><a href="">Enquire</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#gallery">Gallery</a></li>
                         <!-- Dropdown -->
@@ -209,7 +211,7 @@
                             </strong>
                         </p>
                         <!-- <p><button>Add to Cart</button></p> -->
-                        <a href="#enquire"><button>Enquire</button></a>
+                        <a href=""><button id="refer">Enquire</button></a>
 
                     </div>
 
@@ -249,7 +251,7 @@
                             <h3>Plan Your Stay at IVORY SANDS. Get a Quote</h3>
                             <p>(form R 6000 per month)</p>
                             <p>*excluding peak season</p>
-                            <input type="text" name="name" id="name" placeholder="Name" autofocus required>
+                            <input type="text" name="name" id="name" placeholder="Name" required>
                             <input type="text" name="surname" id="surname" placeholder="Surname" required>
                             <input type="tel" name="telephone" id="tel" placeholder="Tel Number" required>
                             <input type="email" name="email" class="email" placeholder="example@email.com" required>
@@ -1297,7 +1299,6 @@
     <script src="app/static/script/script.js"></script>
     
     <!-- <script src="/app/static/script/phone.js"></script> -->
-    
 
 </body>
 
