--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Home</a></li>
-                        <li id="refer"><a href="">Enquire</a></li>
+                        <li id="refer"><a href="#enquire">Enquire</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#gallery">Gallery</a></li>
                         <!-- Dropdown -->
@@ -211,7 +211,7 @@
                             </strong>
                         </p>
                         <!-- <p><button>Add to Cart</button></p> -->
-                        <a href=""><button id="refer">Enquire</button></a>
+                        <a href="#enquire"><button id="refer">Enquire</button></a>
 
                     </div>
 
@@ -1295,7 +1295,6 @@
         setInterval(createBubble, 100);
     </script> -->
 
-    
     <script src="app/static/script/script.js"></script>
     
     <!-- <script src="/app/static/script/phone.js"></script> -->
