Some other changes trying php

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -246,7 +247,7 @@
 
                     <div id="enquire" class="right">
 
-                        <form id="my-form" action="https://formspree.io/f/xpzoowrr" method="POST" enctype="text/plain">
+                        <form id="my-form" action="https://formspree.io/f/xpzoowrr" method="POST">
 
                             <h3>Plan Your Stay at IVORY SANDS. Get a Quote</h3>
                             <p>(form R 6000 per month)</p>
@@ -525,8 +526,7 @@
 
             <div class="gallery">
                 <a class="property-images jg-entry entry-visible"
-                    href="https://d9mwsw9655mj9.cloudfront.net/ivory-sands-clifton-5b5191852ba26.jpg" rel="gallery"
-                    style="width: 378px; height: 378px; top: 380px; left: 1px;"></a>
+                    href="https://d9mwsw9655mj9.cloudfront.net/ivory-sands-clifton-5b5191852ba26.jpg" rel="gallery">
                     <img alt="" src="https://d9mwsw9655mj9.cloudfront.net/ivory-sands-clifton-5b5191852ba26.jpg?d=300x300"
                     width="600" height="400">
                 </a>
