top-nav size adjust

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Home</a></li>
-                        <li id="refer"><a href="#enquire">Enquire</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#gallery">Gallery</a></li>
+                        <li style="font-size: 1.6rem;"><a href="#">Home</a></li>
+                        <li style="font-size: 1.6rem;" id="refer"><a href="#enquire">Enquire</a></li>
+                        <li style="font-size: 1.6rem;"><a href="#about">About</a></li>
+                        <li style="font-size: 1.6rem;"><a href="#gallery">Gallery</a></li>
                         <!-- Dropdown -->
                         <!-- <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -115,7 +115,7 @@
                 <div class="bubble x9"></div>
                 <div class="bubble x10"></div>
             </div>
-            
+
             <section>
                 <!-- {% block body %}
                 {% endblock %} -->
