The wording and style maps auto-added

--- a/index.html
+++ b/index.html
@@ -128,10 +128,6 @@
                                 <h1 id="name">Ivory Sands</h1>
                                 <h2 id="villaFeat" class="villaFeat">
                                     CLIFTON, SLEEPS 4 PEOPLE
-                                    <br>
-                                    <span class="glyphicon glyphicon-barcode">
-                                    </span>
-                                    C314
                                 </h2>
                                 <hr class="intro-divider">
                             </div>
@@ -210,12 +206,6 @@
                         <img src="/img/ivory-sands-clifton-.jpg.webp" alt="Denim Jeans" style="width:100%">
                         <h2>Holiday Rental</h2>
                         <p class="price">from R 6000 per night</p>
-                        <p>
-                            <span class="glyphicon glyphicon-barcode"></span>
-                            <strong>
-                                C314
-                            </strong>
-                        </p>
 
                         <div class="second-middle" style="display: none;">
                             <hr>
@@ -302,31 +292,21 @@
             <section id="about">
 
                 <button type="button" class="collapsible">
-                    <p><b>IVORY SANDS</b> is a unique villa, situate on Clifton beach with direct access
-                        to
-                        the beach making it the perfect position for those wanting to experience a true
-                        beach holiday.</p>
-                    <p>The house has spectacular ocean views both bedrooms as well as the living area.
-                        Stacking doors open up onto a deck with pool, sun loungers and dining area.</p>
-                    <p>Whether you are wanting to spend your day on the beach or merely laze on the
-                        deck,
-                        next to the pool with a cocktail in hand, listening to the soothing ocean, this
-                        is
-                        the perfect property for you.
+                    <p><b>IVORY SANDS</b> is a unique villa, situate on Clifton beach with direct access to the beach 
+                        making it the perfect position for those wanting to experience a true beach holiday.</p>
+                    <p>The house has spectacular ocean views both bedrooms as well as the living area. Stacking 
+                        doors open up onto a deck with pool, sun loungers and dining area.</p>
+                    <p>Whether you are wanting to spend your day on the beach or merely laze on the deck, next to the pool 
+                        with a cocktail in hand, listening to the soothing ocean, this is the perfect property for you. 
                     </p>
                 </button>
 
                 <div class="s-content">
 
-                    <p id="col"><em>This is a dedicated year-round vacation home which is exclusively and
-                            professionally managed. The offices for the manager are based in Camps Bay.
-                            This
-                            property has been meticulously vetted prior to on-boarding, comes with a
-                            dedicated 24/7 guest support team, housekeeping, WiFi and hotel grade
-                            amenities.
-                            The manager prides themselves on offering the highest level of service to
-                            ensure
-                            you have a memorable stay!</em><br>
+                    <p id="col"><em>This is a dedicated year-round vacation home which is exclusively and professionally managed.
+                        This property has been meticulously vetted prior to on-boarding, comes with a dedicated 24/7 guest support team, 
+                        housekeeping, WiFi and hotel grade amenities. The manager prides themselves on offering the highest level of service 
+                        to ensure you have a memorable stay!</em><br>
                     </p><br>
 
                     <div class="sections">
@@ -376,9 +356,7 @@
                                 <p>Shops &amp; Restaurants – 5 minute drive</p>
                                 <p>Beach – Walking distance</p>
                                 <p>V&amp;A Waterfront – 15 minute drive</p>
-                                <p>Airport – 40 minute drive</p><br> <b>IVORY SANDS, Clifton, 2 bedroom villa, Pool, Ref
-                                    #:
-                                    C314</b>
+                                <p>Airport – 40 minute drive</p><br> <b>IVORY SANDS, Clifton, 2 bedroom villa, Pool</b>
                             </div>
     
                         </div>
@@ -480,7 +458,7 @@
                             Please ensure you have familiarised yourself with the by-laws surrounding water
                             restrictions in Cape Town. We request that you adhere to the prescribed minimum
                             water usage at all times. Further information can be found here:
-                            www.capetown.gov.za/thinkwater<br>
+                            <a style="color: blue" href="http://www.capetown.gov.za/thinkwater">www.capetown.gov.za/thinkwater</a><br>
                             <br>
                             Please contact your consultant should you require further information on how
                             this
