body font still to fix, nav, and visuals

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a id="nav-welcome" class="navbar-brand topnav" href="#">Welcome to Ivory Sands</a>
+                    <a id="nav-welcome" class="navbar-brand topnav" href="#">Ivory Sands Logo</a>
 
                 </div>
 
