main elements, sections, colliptible styles

--- a/index.html
+++ b/index.html
@@ -379,14 +379,14 @@
 
                     <div class="sections">
                         <div class="first">
-                            <p><b>BEST FEATURE</b></p>
+                            <p class="title"><b>BEST FEATURE</b></p>
                             <hr>
                             <ul>
                                 <li>Location – on Clifton 1<sup>st</sup> beach</li>
                                 <li>Direct access to beach</li>
                                 <li>Ocean &amp; Mountain view</li>
                             </ul><br>
-                            <p><b>OUTDOORS</b></p>
+                            <p class="title"><b>OUTDOORS</b></p>
                             <hr>
                             <ul>
                                 <li>Private Pool</li>
@@ -395,7 +395,7 @@
                                 <li>6 seater stone-cast glass dining table </li>
                                 <li>Gated access to Clifton Second Beach</li>
                             </ul><br>
-                            <p><b>LOUNGE/DINING</b></p>
+                            <p class="title"><b>LOUNGE/DINING</b></p>
                             <hr>
                             <ul>
                                 <li>Spacious living room with L-shaped couch</li>
@@ -406,7 +406,7 @@
                                 <li>Leads out onto outdoor patio</li>
                             </ul><br>
                             <div>
-                                <p><b>FACILITIES</b><hr></p>
+                                <p class="title"><b>FACILITIES</b><hr></p>
                                 <ul>
                                     <li>Satellite TV (DSTV) - please be aware that signal may be intermittent</li>
                                     <li>Wi Fi internet</li>
@@ -420,7 +420,7 @@
                             </div><br>
     
                             <div>
-                                <p><b>LOCATION</b><hr></p>
+                                <p class="title"><b>LOCATION</b><hr></p>
                                 <p>Shops &amp; Restaurants – 5 minute drive</p>
                                 <p>Beach – Walking distance</p>
                                 <p>V&amp;A Waterfront – 15 minute drive</p>
@@ -430,7 +430,7 @@
                         </div>
 
                         <div class="second">
-                            <p><b>KITCHEN</b></p>
+                            <p class="title"><b>KITCHEN</b></p>
                             <hr>
                             <ul>
                                 <li>Full range of appliances, utensils, crockery and glassware</li>
@@ -441,7 +441,7 @@
                                 <li>Washing machine</li>
                                 <li>Tumble dryer</li>
                             </ul><br>
-                            <p><b>MASTER BEDROOM</b></p>
+                            <p class="title"><b>MASTER BEDROOM</b></p>
                             <hr>
                             <ul>
                                 <li>Queen bed </li>
@@ -450,7 +450,7 @@
                                 <li>Balcony overlooking the ocean</li>
                                 <li>Ample cupboard storage space</li>
                             </ul><br>
-                            <p><b>2<sup>nd</sup> BEDROOM</b></p>
+                            <p class="title"><b>2<sup>nd</sup> BEDROOM</b></p>
                             <hr>
                             <ul>
                                 <li>Queen bed </li>
@@ -461,7 +461,7 @@
                             </ul><br>
                             
                             <div>
-                                <p>
+                                <p class="title">
                                     <strong>FEATURE LIST:</strong><hr>
                                 </p>
                                 <p>
@@ -509,9 +509,10 @@
                     </div><br>
 
                     <div>
-                        <p>
-                            <strong>WATER PROVISIONS:</strong><hr>
-                        </p>
+                        <p class="title">
+                            <strong>WATER PROVISIONS:</strong>
+                        </p> 
+                        <hr>
                         <p>
                             March 2018:<br>
                             - Water tank feeds the pool - 2500l tank - 
