--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="wrapper">
 
-            <div id="background-wrap">
+            <!-- <div id="background-wrap">
                 <div class="bubble x1"></div>
                 <div class="bubble x2"></div>
                 <div class="bubble x3"></div>
@@ -99,7 +99,7 @@
                 <div class="bubble x8"></div>
                 <div class="bubble x9"></div>
                 <div class="bubble x10"></div>
-            </div>
+            </div> -->
 
             <section>
 
@@ -713,8 +713,10 @@
             
         </div>
 
-        <div id="map"></div>
-
+        <div>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3309.9528424896307!2d18.37646991521215!3d-33.94234098063597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc66fec7b43035%3A0x8d00de2c07e4370!2sClifton%204th!5e0!3m2!1sen!2sza!4v1622705984352!5m2!1sen!2sza" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        
     </main>
 
     <footer>
@@ -722,15 +724,6 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul id="footer-list" class="list-inline">
-                        <!-- <li><a href="#">Home</a></li> -->
-                        <!-- <li class="footer-menu-divider">⋅</li> -->
-
-                        <!-- <li><a href="#">Register</a></li> -->
-
-                        <!-- <li class="footer-menu-divider">⋅</li> -->
-                        <!-- <li><a href="#">Login</a></li> -->
-                    </ul>
                     <p class="copyright text-muted small">Copyright © 2021. All Rights Reserved</p>
                 </div>
             </div>
