--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a id="nav-welcome" class="navbar-brand topnav" href="#">Ivory Sands</a>
+                    <a id="nav-welcome" class="navbar-brand topnav" href="#">{Logo}</a>
 
                 </div>
 
