--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a id="nav-welcome" class="navbar-brand topnav" href="#">Ivory Sands</a>
+                    <a id="nav-welcome" class="navbar-brand topnav" href="#">Ivory Sands Beach Villas</a>
 
                 </div>
 
@@ -88,19 +88,6 @@
 
         <div class="wrapper">
 
-            <!-- <div id="background-wrap">
-                <div class="bubble x1"></div>
-                <div class="bubble x2"></div>
-                <div class="bubble x3"></div>
-                <div class="bubble x4"></div>
-                <div class="bubble x5"></div>
-                <div class="bubble x6"></div>
-                <div class="bubble x7"></div>
-                <div class="bubble x8"></div>
-                <div class="bubble x9"></div>
-                <div class="bubble x10"></div>
-            </div> -->
-
             <section >
 
                 <div class="intro-header">
@@ -108,7 +95,7 @@
                         <div class="heroGrid">
                                     
                             <div class="intro-message">
-                                <h1 id="name">Ivory Sands</h1>
+                                <h1 id="name">Ivory Sands Beach Villas</h1>
                                 <h2 id="villaFeat" class="villaFeat">
                                     CLIFTON, SLEEPS 4 PEOPLE
                                 </h2>
