list-style: none

--- a/index.html
+++ b/index.html
@@ -253,7 +253,6 @@
 
                     </div>
 
-
                 </div>
 
                 <div id="enquire" class="right">
@@ -287,7 +286,7 @@
         <section id="about">
 
             <div class="text">
-                <p><b>IVORY SANDS</b> is a unique villa, situate on Clifton beach with direct access to the beach making it the perfect position for those wanting to experience a true beach holiday. The house has spectacular ocean views both bedrooms as well as the living area. Stacking doors open up onto a deck with pool, sun loungers and dining area.</p>
+                <p><b>Ivory Sands Beach Villas</b> is a unique villa, situate on Clifton beach with direct access to the beach making it the perfect position for those wanting to experience a true beach holiday. The house has spectacular ocean views both bedrooms as well as the living area. Stacking doors open up onto a deck with pool, sun loungers and dining area.</p>
                 <p>Whether you are wanting to spend your day on the beach or merely laze on the deck, next to the pool with a cocktail in hand, listening to the soothing ocean, this is the perfect property for you.
                 </p><span id="dots">...</span>
                 
